Added products overview liquid

--- a/sections/products-overview.liquid
+++ b/sections/products-overview.liquid
@@ -22,7 +22,8 @@
       </div>
 
       <div class="product-pricing">
-        <div class="pricing-option">
+        <div class="pricing-option featured">
+          <span class="popular-tag">Most Popular</span>
           <div class="price-header">
             <h4>Monthly</h4>
             <div class="price">
@@ -41,8 +42,7 @@
           <a href="/products/bot-suite-monthly" class="btn btn-primary">Get Started</a>
         </div>
 
-        <div class="pricing-option featured">
-          <span class="popular-tag">Most Popular</span>
+        <div class="pricing-option">
           <div class="price-header">
             <h4>Annual</h4>
             <div class="price">
@@ -96,19 +96,42 @@
       <div class="product-pricing">
         <div class="pricing-option coaching-card">
           <div class="price-header">
-            <h4>Lifetime Access</h4>
+            <h4>Monthly</h4>
             <div class="price">
-              <span class="amount">$997</span>
-              <span class="period">one-time</span>
+              <span class="amount">$79</span>
+              <span class="period">/mo</span>
             </div>
           </div>
           <ul class="plan-features">
-            <li>60+ Hours Video Coaching</li>
+            <li>60+ Hours of Recorded Coaching Videos</li>
+            <li>Private Coaching Discussion Group</li>
+            <li>Ask Me Questions</li>
             <li>Strategy Breakdowns</li>
             <li>Risk Management Training</li>
             <li>Market Analysis Techniques</li>
             <li>Live Trade Reviews</li>
-            <li>Lifetime Access to Content</li>
+          </ul>
+          <button class="btn btn-disabled" disabled>Coming Soon</button>
+        </div>
+
+        <div class="pricing-option coaching-card featured">
+          <span class="popular-tag">Most Popular</span>
+          <div class="price-header">
+            <h4>Annual</h4>
+            <div class="price">
+              <span class="amount">$660</span>
+              <span class="period">/yr</span>
+            </div>
+            <span class="savings">Save 30% ($288/year)</span>
+          </div>
+          <ul class="plan-features">
+            <li>60+ Hours of Recorded Coaching Videos</li>
+            <li>Private Coaching Discussion Group</li>
+            <li>Ask Me Questions</li>
+            <li>Strategy Breakdowns</li>
+            <li>Risk Management Training</li>
+            <li>Market Analysis Techniques</li>
+            <li>Live Trade Reviews</li>
           </ul>
           <button class="btn btn-disabled" disabled>Coming Soon</button>
         </div>
